[package]
name = "rest-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "2.7.0"
actix-web = "4.2.1"
diesel = { version = "2.0.0", features = ["postgres", "r2d2", "chrono", "uuid"] }
env_logger = "0.9.1"
r2d2 = "0.8.10"
r2d2-diesel = "1.0.0"
rand = "0.8.5"
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.85"
uuid = { version = "1.1.2", features = ["serde", "v4"] }
